--- a/style.css
+++ b/style.css
@@ -73,9 +73,10 @@ h3 {
 }
 .mesure>div {
 text-align: center;
+min-width: 80px;
 }
 
-.mesure{
+.mesure:not(:last-child){
     position: relative;
     margin-right: 50px;
     padding-right: 50px;
@@ -336,6 +337,7 @@ margin: auto;
     width: 100%;
     margin: auto;
     margin-bottom: 30px;
+    padding: 0 15px;
 }
 
 .welcome-text-date {
@@ -373,6 +375,25 @@ h2 {
 
 .line {
     height: 100px;
+}
+
+.countdown{
+    display: flex;
+        justify-content: center;
+        gap: 0px;
+}
+.mesure>div:first-of-type {
+    font-size: 30px;
+    line-height: 50px;
+}
+.mesure>div {
+text-align: center;
+}
+
+.mesure:not(:last-child){
+    position: relative;
+    margin-right: 0px;
+    padding-right: 0px;
 }
 }
 
