--- a/style.css
+++ b/style.css
@@ -323,6 +323,10 @@ margin: auto;
     background-color: #fff;
 }
 
+.colors {
+    gap: 13px;
+}
+
 .welcome {
     background-attachment: scroll;
 }
